--- a/simplenet_ui.ui
+++ b/simplenet_ui.ui
@@ -364,6 +364,19 @@
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="refWeights">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>200</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Refresh weights viz</string>
+    </property>
+   </widget>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
@@ -375,6 +388,7 @@
    <zorder>resetButton</zorder>
    <zorder>groupBox</zorder>
    <zorder>groupBox_2</zorder>
+   <zorder>refWeights</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
