--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -383,7 +383,7 @@
         <item>
          <widget class="QLabel" name="w1label">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
